istio/deployment-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app: sample-app
    service: sample-app
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: sample-app
