istio/sample-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-svc
  labels:
    app: sample-app
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: sample-app
